--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,10 @@
 GOOGLE_CLIENT_ID=YOUR_CLIENT_ID
 GOOGLE_CLIENT_SECRET=YOUR_CLIENT_SECRET
 
-# For Desktop client use: http://localhost
-# For Web client use your exact redirect URI
-GOOGLE_REDIRECT_URI=http://localhost
+# Must exactly match one of your OAuth redirect URIs
+# Example (local): http://localhost:3000/auth/callback
+# Example (prod):  https://your-domain.example/auth/callback
+GOOGLE_REDIRECT_URI=http://localhost:3000/auth/callback
 
 # Where the API listens (inside the container)
 PORT=3000
@@ -20,6 +21,16 @@ FROM_EMAIL=you@gmail.com
 
 # Allow request body to override "from" (true/false)
 ALLOW_FROM_OVERRIDE=false
+
+# Protect /auth/start (optional) with a shared secret
+AUTH_KEY=change-me-long-random
+
+# Optional: redirect after auth completes (success/failure)
+AUTH_SUCCESS_REDIRECT=
+AUTH_FAILURE_REDIRECT=
+
+# Optional: auth state TTL in ms (default 10 min)
+AUTH_STATE_TTL_MS=600000
 
 # Optional: path to the OAuth tokens file (for Docker Compose use /data/tokens.json)
 TOKENS_PATH=tokens.json
